--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.20.1",
     "nodemon": "^3.1.11",
     "openai": "^6.9.1"
   }
