--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.20.1",
     "nodemon": "^3.1.11",
-    "openai": "^6.9.1"
+    "openai": "^6.9.1",
+    "react-spinners": "^0.17.0"
   }
 }
